# facet-generate

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  TODO.md  codebook.toml
.config/: nextest.toml
crates/facet-generate/: Cargo.toml
crates/facet-generate-attrs/: Cargo.toml
crates/facet-generate-attrs/src/: lib.rs
crates/facet-generate/src/generation/csharp/emitter/: tests.rs  tests_json.rs
crates/facet-generate/src/generation/csharp/emitter/tests_bincode/: enums.rs  mod.rs
crates/facet-generate/src/generation/csharp/generator/: tests.rs
crates/facet-generate/src/generation/csharp/installer/: tests.rs
crates/facet-generate/src/generation/csharp/installer/runtime/bincode/: FacetHelpers.cs
crates/facet-generate/src/generation/java/: installer.rs
crates/facet-generate/src/generation/kotlin/: mod.rs
crates/facet-generate/src/generation/kotlin/emitter/features/: BigInt.kt  ListOfT.kt
crates/facet-generate/src/generation/swift/: mod.rs  package.rs
crates/facet-generate/src/generation/swift/emitter/: tests_bincode.rs
crates/facet-generate/src/generation/swift/emitter/features/: OptionOfT.swift
crates/facet-generate/src/generation/tests/basic/snapshots/swift/Sources/Example/: Example.swift
crates/facet-generate/src/generation/tests/with_namespaces_as_external/snapshots/java/com/example/: Child.java
crates/facet-generate/src/generation/tests/with_namespaces_as_external/snapshots/kotlin/: build.gradle.kts
crates/facet-generate/src/generation/tests/with_namespaces_as_external/snapshots/swift/: Package.swift
crates/facet-generate/src/generation/tests/with_namespaces_as_external/snapshots/swift/Sources/Example/: Example.swift
crates/facet-generate/src/generation/tests/with_namespaces_as_internal/: mod.rs
crates/facet-generate/src/generation/tests/with_namespaces_as_internal/snapshots/java/com/example/: Child.java
crates/facet-generate/src/generation/tests/with_namespaces_as_internal/snapshots/java/com/example/other/: OtherParent.java
crates/facet-generate/src/generation/tests/with_namespaces_as_internal/snapshots/kotlin/com/example/other/: Other.kt
crates/facet-generate/src/generation/tests/with_namespaces_as_internal/snapshots/swift/Sources/Other/: Other.swift
crates/facet-generate/src/generation/tests/with_serialization/: mod.rs
crates/facet-generate/src/generation/tests/with_serialization/snapshots/java/com/example/: MyStruct.java  TraitHelpers.java
crates/facet-generate/src/generation/tests/with_serialization_and_namespaces_as_external/: mod.rs
crates/facet-generate/src/generation/tests/with_serialization_and_namespaces_as_external/snapshots/typescript/bincode/: bincodeDeserializer.ts  bincodeSerializer.ts
crates/facet-generate/src/generation/tests/with_serialization_and_serde_external/: mod.rs
crates/facet-generate/src/generation/tests/with_serialization_and_serde_external/snapshots/java/com/example/: Child.java
crates/facet-generate/src/generation/tests/with_serialization_and_serde_external/snapshots/swift/Example/: Package.swift
crates/facet-generate/src/generation/typescript/emitter/: tests.rs  tests_json.rs
crates/facet-generate/src/generation/typescript/emitter/features/: ArrayOfT.ts  SetOfT.ts
crates/facet-generate/src/generation/typescript/generator/: mod.rs
crates/facet-generate/src/tests/anonymous_struct_with_rename/: output.kt
crates/facet-generate/src/tests/can_apply_namespace_correctly/: mod.rs  output.ts
crates/facet-generate/src/tests/can_generate_adjacently_tagged_enum/: output.swift
crates/facet-generate/src/tests/can_generate_empty_externally_tagged_enum/: output.kt
crates/facet-generate/src/tests/can_generate_generic_struct/: mod.rs
crates/facet-generate/src/tests/can_generate_internally_tagged_enum/: output.ts
crates/facet-generate/src/tests/can_generate_simple_struct_with_a_comment/: output.kt
crates/facet-generate/src/tests/can_generate_slice_of_user_type/: mod.rs
crates/facet-generate/src/tests/can_generate_unit_enum/: mod.rs
crates/facet-generate/src/tests/can_handle_serde_rename/: output.swift  output.ts
crates/facet-generate/src/tests/can_override_types/: mod.rs
crates/facet-generate/src/tests/generate_types/: mod.rs  output.java
crates/facet-generate/src/tests/generate_types_with_keywords/: output.swift
crates/facet-generate/src/tests/property_wrapper/: mod.rs
crates/facet-generate/src/tests/recursive_adjacently_tagged_enum_decorator/: output.kt
crates/facet-generate/src/tests/serialize_anonymous_field_as/: mod.rs
crates/facet-generate/src/tests/test_default_generic_constraints/: mod.rs
crates/facet-generate/src/tests/test_generate_char/: output.kt
crates/facet-generate/src/tests/test_keypath_mutable_atomic_enum_field/: mod.rs  output.kt
crates/facet-generate/src/tests/test_keypath_mutable_nested_optional/: mod.rs
crates/facet-generate/src/tests/test_keypath_mutable_nested_type/: output.swift
crates/facet-generate/src/tests/test_serde_default_struct/: output.kt  output.swift
crates/facet-generate/src/tests/test_serde_url/: mod.rs
crates/facet-generate/src/tests/test_type_alias/: output.ts
crates/facet-generate/src/tests/test_unit_enum_case_name_support/: output.ts
crates/facet-generate/src/tests/test_unit_enum_serde_other/: mod.rs  output.kt
crates/facet-generate/src/tests/unit_enum_is_properly_named_with_serde_overrides/: mod.rs
crates/facet-generate/src/tests/use_correct_integer_types/: output.kt  output.ts
crates/facet-generate/tests/: csharp_runtime.rs  kotlin_generation.rs  swift_generation.rs
facet-generate-attrs/: Cargo.toml
facet-generate-attrs/src/: lib.rs
fg/: Cargo.toml
fg/src/: lib.rs
src/: error.rs  lib.rs  tests.rs
tests/: common_tests.rs  csharp_generation.rs  csharp_runtime.rs  java_generation.rs  java_runtime.rs  kotlin_generation.rs  swift_generation.rs  (+5 more)
(+911 files in other folders)
