[package]
name = "facet_generate"
description = "Generate Swift, Kotlin and TypeScript from types annotated with `#[derive(Facet)]`"
version = "0.12.1"
authors = ["Red Badger Consulting Limited"]
repository = "https://github.com/redbadger/facet-generate"
license = "Apache-2.0"
keywords = ["codegen", "ffi", "facet"]
edition = "2024"
rust-version = "1.87"

[dependencies]
derive_builder = "0.20.2"
facet = "=0.31"
heck = "0.5.0"
include_dir = { version = "0.7.4", optional = true }
indent = "0.1.1"
indoc = { version = "2.0.7", optional = true }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16.2"
thiserror = "2.0.17"
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.100"
bcs = "0.1.6"
bincode = "=1"
chrono = "0.4.42"
difficient = "0.1.0"
expect-test = "1.5.1"
facet = { version = "=0.31", features = ["chrono", "url"] }
ignore = "0.4"
insta = { version = "1.43.2", features = ["yaml", "json"] }
maplit = "1.0.2"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.23.0"
url = "2.5.7"

[features]
default = ["generate"]
generate = ["java", "kotlin", "swift", "typescript"]
java = ["include_dir"]
kotlin = ["include_dir", "indoc"]
swift = ["include_dir", "indoc"]
typescript = ["include_dir"]
