[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.17.0"
authors = ["Red Badger Consulting Limited"]
repository = "https://github.com/redbadger/facet-generate"
license = "Apache-2.0"
keywords = ["codegen", "ffi", "facet"]
edition = "2024"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0.102"
expect-test = "1.5.1"
facet = "=0.44"
facet-generate-attrs = { path = "crates/facet-generate-attrs", version = "0.17.0" }
