[package]
name = "facet-generate-attrs"
description = "Extension attributes for facet-generate code generation"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
facet = "=0.44.1"
