[package]
name = "facet-generate-attrs"
description = "Extension attributes for facet-generate code generation"
version = "0.17.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
facet.workspace = true
